<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sampathduddu.myfitnessapp.MainFitnessScreen"
    tools:showIn="@layout/activity_main_fitness_screen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fitnessTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberReps"
        android:width = "130dp"
        android:hint = "@string/reps"
        android:layout_above="@+id/btnCalculate"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberMinutes"
        android:width = "130dp"
        android:hint = "@string/minutes"
        android:layout_alignTop="@+id/numberReps"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/totalCalories"
        android:width = "320dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caloriesButton"
        android:id="@+id/btnCalculate"
        android:layout_above="@+id/totalCalories"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnCompare" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compareOther"
        android:id="@+id/btnCompare"
        android:layout_above="@+id/totalCalories"
        android:layout_toEndOf="@+id/btnCalculate" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exerciseSpinner"
        android:entries = "@array/exercises"
        android:layout_above="@+id/weightAmt"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numCalories"
        android:layout_below="@+id/totalCalories"
        android:layout_toEndOf="@+id/btnCalculate"
        android:hint = "#calories"
        android:layout_marginTop="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="How many calories would you like to burn?"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/numCalories"
        android:layout_toStartOf="@+id/numCalories" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:id="@+id/btnCalculateRepsMinutes"
        android:layout_below="@+id/numCalories"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weightAmt"
        android:layout_above="@+id/numberReps"
        android:hint = "Weight (lbs)"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src = "@drawable/Exercise"
        android:id="@+id/imageView"
        android:layout_toEndOf="@+id/totalCalories"
        />
</RelativeLayout>
